Se cambio el src de las imagenes

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -44,7 +44,7 @@ const PROJECTS = [
         description: 'Versión moderna del clásico juego de Equis y Cero. Ofrece una interfaz intuitiva y responsiva, ideal para jugar en cualquier dispositivo.',
         link: 'https://equis-cero.vercel.app/',
         github: 'https://github.com/Jaime07503/Equis-Cero',
-        image: '../public/images/equis_cero.webp',
+        image: '../public/equis_cero.webp',
         tags: [TAGS.HTML, TAGS.CSS, TAGS.JAVASCRIPT, TAGS.REACT]
     },
     {
@@ -52,7 +52,7 @@ const PROJECTS = [
         description: 'Aplicación de búsqueda de películas. Permite a los usuarios encontrar información sobre sus películas favoritas de manera rápida y eficiente. ',
         link: 'https://cinema-quest.vercel.app/',
         github: 'https://github.com/Jaime07503/Cinema-Quest',
-        image: '../public/images/cinema_quest.webp',
+        image: '../public/cinema_quest.webp',
         tags: [TAGS.HTML, TAGS.BOOTSTRAP, TAGS.JAVASCRIPT, TAGS.REACT]
     }
 ]
