--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Contact from '../components/Contact.astro';
 		<SectionContainer class="py-32 pb-32">
 			<img 
 				class="rounded-lg size-44 si mb-4"
-				src="../public/images/mario_martinez.jpg" 
+				src="../public/mario_martinez.jpg" 
 				alt="Fotografía de Mario Jaime Martínez Herrera"
 			>
 			<h1 class="text-white text-2xl font-bold flex flex-row gap-x-4 mb-1">
