Cambio en el flex del navbar

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 <header class="fixed w-full py-3 backdrop-blur-sm z-50">
-    <nav class="flex flex-col justify-center sm:flex-row gap-x-10 gap-y-4 sm:gap-y-0 opacity-80">
+    <nav class="flex flex-row justify-center sm:flex-row gap-x-10 gap-y-4 sm:gap-y-0 opacity-80">
         <a href="#top">Inicio</a>
         <a href="#experiencia">Experiencia</a>
         <a href="#proyectos">Proyectos</a>
