--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,9 +9,7 @@ import Experience from '../components/Experience.astro';
 import SectionContainer from '../components/SectionContainer.astro';
 import Briefcase from '../icons/Briefcase.astro';
 import CodeIcon from '../icons/Code.astro';
-import AddressBookIcon from '../icons/AddressBook.astro'
 import Projects from '../components/Projects.astro';
-import Contact from '../components/Contact.astro';
 ---
 
 <Layout title="Portfolio de Mario Martínez - Desarrollador y Programador Web"
@@ -19,7 +17,7 @@ import Contact from '../components/Contact.astro';
 	<main class="px-4">
 		<SectionContainer class="py-32 pb-32">
 			<img 
-				class="rounded-lg size-44 si mb-4"
+				class="rounded-lg size-48 mb-4"
 				src="mario_martinez.jpg" 
 				alt="Fotografía de Mario Jaime Martínez Herrera"
 			>
