Cambios en el header, footer e iconos

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,10 +3,14 @@ import ExperienceItem from '../components/ExperienceItem.astro'
 
 const EXPERIENCE = [
     {
+        date: 'Noviembre 2024 - Actualidad',
+        title: 'Desarrollador FullStack - CruwX',
+        description: 'Especializado en el desarrollo de aplicaciones web con Laravel, incluyendo la implementación de nuevas funcionalidades y la optimización de código. También brindo soporte y actualizaciones a sitios web creados con Shopify y WordPress, asegurando su correcto funcionamiento y resolución de problemas.',
+    },
+    {
         date: 'Agosto 2023 - Febrero 2024',
-        title: 'Aplicación Web para la Gestión del Proceso de Investigaciones de Cátedra en UNICAES',
-        description: 'Implementamos una aplicación web para optimizar y gestionar el proceso de investigaciones de cátedra. Este sistema está diseñado para facilitar la administración, seguimiento y evaluación de los proyectos de investigación llevados a cabo por docentes y estudiantes de la institución.',
-        link: '',
+        title: 'Desarrollador FullStack - UNICAES',
+        description: 'Implementé una aplicación web para optimizar la gestión de investigaciones de cátedra, facilitando la administración, seguimiento y evaluación de proyectos de investigación para docentes y estudiantes de la institución.',
     }
 ]
 ---
