--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,11 +17,11 @@ import Projects from '../components/Projects.astro';
 	<main class="px-4">
 		<SectionContainer class="py-32 pb-32">
 			<img 
-				class="rounded-lg size-48 mb-4"
+				class="rounded-lg size-48 mb-5"
 				src="mario_martinez.jpg" 
 				alt="Fotografía de Mario Jaime Martínez Herrera"
 			>
-			<h1 class="text-white text-2xl font-bold flex flex-row gap-x-4 mb-1">
+			<h1 class="text-white text-4xl font-bold flex flex-row gap-x-6 mb-3">
 					Mario Martínez 
 					<div class="flex justify-center items-center">
 						<a 
@@ -34,11 +34,11 @@ import Projects from '../components/Projects.astro';
 						</a>
 					</div>
 			</h1>
-			<h2 class="text-base text-white/70 text-wrap max-w-[700px]">
-				Soy desarrollador web con sede en Santa Ana, El Salvador, especializado en la creación de soluciones únicas y personalizadas para mis clientes.
+			<h2 class="text-base text-white/50 text-wrap max-w-[700px]">
+				Soy desarrollador web en Santa Ana, El Salvador, especializado en crear soluciones personalizadas y de alto rendimiento que impulsan el éxito digital de mis clientes.
 			</h2>
 
-			<nav class="flex gap-2 mt-4 flex-wrap">
+			<nav class="flex gap-5 mt-5 flex-wrap">
 				<SocialPill href="https://www.linkedin.com/in/mario-martínez-b509252bb">
 					<LinkedinIcon class="size-5 md:size-6" />
 				</SocialPill>
@@ -52,7 +52,7 @@ import Projects from '../components/Projects.astro';
 		</SectionContainer>
 
 		<SectionContainer id="experiencia">
-			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-2xl text-white font-semibold mb-6 flex gap-x-3 items-center">
 				<Briefcase class="size-7"/>
 				Experiencia Laboral
 			</h2>
@@ -60,7 +60,7 @@ import Projects from '../components/Projects.astro';
 		</SectionContainer>
 
 		<SectionContainer id="proyectos">
-			<h2 class="text-2xl font-semibold mb-6 flex gap-x-3 items-center">
+			<h2 class="text-2xl text-white font-semibold mb-6 flex gap-x-3 items-center">
 				<CodeIcon class="size-7"/>
 				Proyectos 
 			</h2>
