--- a/src/components/Badge.astro
+++ b/src/components/Badge.astro
@@ -1,4 +1,5 @@
-<span class="bg-gray-900 text-white-900 border border-white text-xs font-medium me-2 
-    py-1 px-2 rounded dark:bg-blue-900 dark:text-blue-300 hover:bg-white hover:text-gray-900">
+<span class="bg-gray-900/80 text-white-900 border border-white/70 text-xs font-medium 
+    py-1 px-3 rounded hover:bg-white hover:text-gray-900"
+>
    <slot />
 </span>
