--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,17 +1,16 @@
-<footer class="rounded-lg shadow m-4 bg-black/20 backdrop-blur-lg w-full lg:w-[770px] xl:w[1120px] mx-auto">
+<footer class="w-full bg-[#121212]/70 border-t border-gray-700">
     <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-      <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 Mario Martínez.</span>
-    </span>
-    <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
-        <li>
-            <a href="#experiencia" class="hover:underline me-4 md:me-6">Experiencia</a>
-        </li>
-        <li>
-            <a href="#proyectos" class="hover:underline me-4 md:me-6">Proyectos</a>
-        </li>
-        <!-- <li>
-            <a href="#contacto" class="hover:underline">Contacto</a>
-        </li> -->
-    </ul>
+        <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 Mario Martínez.</span>
+        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+            <li>
+                <a href="#experiencia" class="hover:underline me-4 md:me-6">Experiencia</a>
+            </li>
+            <li>
+                <a href="#proyectos" class="hover:underline me-4 md:me-6">Proyectos</a>
+            </li>
+            <!-- <li>
+                <a href="#contacto" class="hover:underline">Contacto</a>
+            </li> -->
+        </ul>
     </div>
 </footer>
