--- a/src/icons/Briefcase.astro
+++ b/src/icons/Briefcase.astro
@@ -5,7 +5,7 @@
     height="24"  
     viewBox="0 0 24 24"  
     fill="none"  
-    stroke="currentColor"  
+    stroke="#FFF"  
     stroke-width="2"  
     stroke-linecap="round"  
     stroke-linejoin="round"  
